--- a/app/design/frontend/default/mluczka/layout/catalog.xml
+++ b/app/design/frontend/default/mluczka/layout/catalog.xml
@@ -69,7 +69,7 @@ Category default layout
             <action method="setTemplate"><template>page/2columns-left.phtml</template></action>
         </reference>
         <reference name="left">
-            <block type="catalog/navigation" template="catalog/navigation/left.phtml"/>
+            <block type="catalog/layer_view" name="catalog.leftnav" template="catalog/layer/view.phtml"/>
             <block type="reports/product_viewed" template="reports/product_viewed.phtml" />
         </reference>
         <reference name="content">
