--- a/app/design/frontend/default/mluczka/template/catalog/product/view/form.phtml
+++ b/app/design/frontend/default/mluczka/template/catalog/product/view/form.phtml
@@ -1,6 +1,4 @@
-<?php
-    $_product = $this->getProduct();
-?>
+<?php $_product = $this->getProduct(); ?>
 <form action="<?php echo $this->getSubmitUrl($_product) ?>" method="post" id="product_addtocart_form"<?php if($_product->getOptions()): ?> enctype="multipart/form-data"<?php endif; ?>>
 
     <table>
