--- a/app/design/frontend/default/mluczka/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/mluczka/template/catalog/product/view.phtml
@@ -46,5 +46,6 @@
 
 <div class="clr"></div>
 
+<?php //echo $this->getReviewsSummaryHtml($_product, false, true); ?>
 <?php echo $this->getChildHtml('customers-review'); ?>
 <?php echo $this->getChildHtml('crosssell'); ?>
