--- a/app/design/frontend/default/mluczka/template/catalog/product/view/customers-review.phtml
+++ b/app/design/frontend/default/mluczka/template/catalog/product/view/customers-review.phtml
@@ -17,7 +17,7 @@
     <div class="need-help">
         <h3><?php echo $this->__('Need Help Deciding?'); ?></h3>
         <ul>
-            <li><a href="#"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') . $this->__('Reviews'); ?></a></li>
+            <li><a href="#"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') . ' ' .$this->__('Reviews'); ?></a></li>
             <li><a href="#"><?php echo $this->__('Which Duvet do I choose?'); ?></a></li>
             <li><a href="#"><?php echo $this->__('Continental Pillows'); ?></a></li>
         </ul>
