--- a/app/design/frontend/default/mluczka/template/catalog/product/slider.phtml
+++ b/app/design/frontend/default/mluczka/template/catalog/product/slider.phtml
@@ -1,15 +1,24 @@
-<div id="baner">
-    <div id="slider" class="nivoSlider">
-        <img src="<?php echo $this->getSkinUrl(); ?>images/slide-1.jpg" alt="" />
-        <img src="<?php echo $this->getSkinUrl(); ?>images/slide-2.jpg" alt="" />
-        <img src="<?php echo $this->getSkinUrl(); ?>images/slide-3.jpg" alt="" />
-        <img src="<?php echo $this->getSkinUrl(); ?>images/slide-4.jpg" alt="" />
-    </div>
-</div><!--baner-->
+<?php
+    $_products = $this->getProductCollection();
+    if ($_products && $_products->getSize()) :
+?>
+    <div id="baner">
+        <div id="slider" class="nivoSlider">
+            <?php foreach ($_products->getItems() as $_product): ?>
+                <img alt="" src="<?php echo $this->helper('catalog/image')->init($_product, 'image')->resize(976, 349); ?>" />
+            <?php endforeach; ?>
+        </div>
+    </div><!--baner-->
 
-<div id="box-3-offer">
-    <div class="box-3-offer-column"><img src="<?php echo $this->getSkinUrl(); ?>images/box3-1.jpg" alt="" /></div><!--box-3-offer-->
-    <div class="box-3-offer-column"><img src="<?php echo $this->getSkinUrl(); ?>images/box3-2.jpg" alt="" /></div><!--box-3-offer-->
-    <div class="box-3-offer-column box-3-offer-last"><img src="<?php echo $this->getSkinUrl(); ?>images/box3-3.jpg" alt="" /></div><!--box-3-offer-->
-    <div class="clr"></div>
-</div><!--box-3-offer-->
+    <div id="box-3-offer">
+        <?php $limit = 3; ?>
+        <?php foreach ($_products->getItems() as $_product): ?>
+            <?php if($limit-- > 0) : ?>
+                <div class="box-3-offer-column<?php if($limit == 0) { echo ' box-3-offer-last'; } ?>">
+                    <img src="<?php echo $this->helper('catalog/image')->init($_product, 'image')->resize(320, 161); ?>" alt="" />
+                </div><!--box-3-offer-->
+            <?php endif; ?>
+        <?php endforeach; ?>
+        <div class="clr"></div>
+    </div><!--box-3-offer-->
+<?php endif; ?>
