--- a/app/design/frontend/default/mluczka/template/catalog/product/slider.phtml
+++ b/app/design/frontend/default/mluczka/template/catalog/product/slider.phtml
@@ -1,4 +1,5 @@
 <?php
+    $sliderLimit = 3;
     $_products = $this->getProductCollection();
     if ($_products && $_products->getSize()) :
 ?>
@@ -11,14 +12,16 @@
     </div><!--baner-->
 
     <div id="box-3-offer">
-        <?php $limit = 3; ?>
         <?php foreach ($_products->getItems() as $_product): ?>
-            <?php if($limit-- > 0) : ?>
-                <div class="box-3-offer-column<?php if($limit == 0) { echo ' box-3-offer-last'; } ?>">
-                    <img src="<?php echo $this->helper('catalog/image')->init($_product, 'image')->resize(320, 161); ?>" alt="" />
-                </div><!--box-3-offer-->
-            <?php endif; ?>
+            <?php $sliderLimit -= 1; ?>
+
+            <div class="box-3-offer-column<?php if($sliderLimit == 0) { echo ' box-3-offer-last'; } ?>">
+                <img src="<?php echo $this->helper('catalog/image')->init($_product, 'image')->resize(320, 161); ?>" alt="" />
+            </div><!--box-3-offer-->
+
+            <?php if($sliderLimit <= 0) { break; } ?>
         <?php endforeach; ?>
+
         <div class="clr"></div>
     </div><!--box-3-offer-->
 <?php endif; ?>
