--- a/app/design/frontend/default/mluczka/layout/catalog.xml
+++ b/app/design/frontend/default/mluczka/layout/catalog.xml
@@ -202,7 +202,7 @@ Product view
                 <block type="catalog/product_view" name="product.info.customers-review" as="customers-review" template="catalog/product/view/customers-review.phtml"/>
                 <block type="catalog/product_view" name="product.info.crosssell" as="crosssell" template="catalog/product/view/crosssell.phtml"/>
                 <block type="catalog/product_view" name="product.info.form" as="form" template="catalog/product/view/form.phtml">
-                    <block type="catalog/product_view" name="product.info.attributes" as="attributes" template="catalog/product/view/attributes.phtml"/>
+                    <block type="catalog/product_attributes" name="product.info.attributes" as="attributes" template="catalog/product/view/attributes.phtml"/>
                     <block type="catalog/product_view" name="product.info.extra" as="extra" template="catalog/product/view/extra.phtml"/>
                 </block>
 
