--- a/app/design/frontend/default/mluczka/template/catalog/product/view/customers-review.phtml
+++ b/app/design/frontend/default/mluczka/template/catalog/product/view/customers-review.phtml
@@ -1,6 +1,13 @@
 <?php
     $_helper = $this->helper('catalog/output');
     $_product = $this->getProduct();
+
+    $productName = $_helper->productAttribute($_product, $_product->getName(), 'name');
+
+    $reviewsUrl = Mage::getUrl('review/product/list', array(
+        'id'       => $_product->getId(),
+        'category' => $_product->getCategoryId(),
+    ));
 ?>
 <div id="customers-help">
 
@@ -13,7 +20,7 @@
                 <?php echo $this->getChildHtml('review_form'); ?>
             <?php else : ?>
                 <p class="customres-box-big">
-                    <?php echo $this->__('Write Your Own Review about') . ' ' . $_helper->productAttribute($_product, $_product->getName(), 'name'); ?>
+                    <?php echo $this->__('Write Your Own Review about %s', $productName); ?>
                 </p>
                 <p class="customres-box-small"><?php echo $this->__('Only registered users can write reviews. Please log in or register'); ?></p>
             <?php endif; ?>
@@ -23,7 +30,7 @@
     <div class="need-help">
         <h3><?php echo $this->__('Need Help Deciding?'); ?></h3>
         <ul>
-            <li><a href="#"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') . ' ' .$this->__('Reviews'); ?></a></li>
+            <li><a href="<?php echo $reviewsUrl; ?>"><?php echo $this->__('%s Reviews', $productName); ?></a></li>
             <li><a href="#"><?php echo $this->__('Which Duvet do I choose?'); ?></a></li>
             <li><a href="#"><?php echo $this->__('Continental Pillows'); ?></a></li>
         </ul>
